mkdocs-material-9.5.4 (2024-01-15)

  * Fixed #6645: Local storage with invalid value can break site
  * Fixed #6635: Tags icons before default ignored if default is set

mkdocs-material-9.5.3+insiders-4.49.2 (2024-01-09)

  * Fixed missing attribute lists extension for tags plugin
  * Fixed #6627: New tags plugin crashes on Python 3.8

mkdocs-material-9.5.3+insiders-4.49.1 (2024-01-07)

  * Improved interop of new tags plugin with other plugins
  * Fixed #6594: Tags plugin doesn't work with mkdocs-macros plugin
  * Fixed #6569: Social plugin crashes if in different file system location

mkdocs-material-9.5.3+insiders-4.49.0 (2023-12-29)

  * Added support for exporting tags and mappings
  * Added support for disabling tags and/or listings or both
  * Fixed tag links from pages to listings on homepage

mkdocs-material-9.5.3+insiders-4.48.0 (2023-12-23)

  * Rewrite of tags plugin, now much more powerful
  * Added support for nested tags (tag hierarchies, e.g. foo/bar)
  * Added support for shadow tags (by list, prefix or suffix)
  * Added support for custom tag layouts and templates
  * Added support for hiding tags in table of contents
  * Added support for configurable inline tag listings
  * Added support for automatically linking to closest tag listing
  * Added support for scoped listings (limit to subsection of site)
  * Added support for multiple instances of tags plugin
  * Added support for changing front matter property and template variable
  * Added support for tag slugification format strings
  * Fixed #6510: Projects plugin out of memory on Linux (4.47.1 regression)
  * Fixed projects plugin not notifying plugins about serve mode
  * Fixed projects plugin skipping projects on prefix match
  * Deprecated tags_file and tags_extra_files settings
  * Modernized tags plugin code base

mkdocs-material-9.5.3 (2023-12-23)

  * Limited version range of MkDocs to < 1.6
  * Updated Macedonian translations
  * Fixed #6520: Group plugin crashes when using mike