@@ -36,6 +36,23 @@
               "type": "string",
               "default": ".cache/plugins/privacy"
             },
+            "log": {
+              "title": "Enable logging",
+              "markdownDescription": "https://squidfunk.github.io/mkdocs-material/plugins/privacy/#config.log",
+              "type": "boolean",
+              "default": true
+            },
+            "log_level": {
+              "title": "Log level",
+              "markdownDescription": "https://squidfunk.github.io/mkdocs-material/plugins/privacy/#config.log_level",
+              "enum": [
+                "error",
+                "warn",
+                "info",
+                "debug"
+              ],
+              "default": "info"
+            },
             "assets": {
               "title": "Process external assets",
               "markdownDescription": "https://squidfunk.github.io/mkdocs-material/plugins/privacy/#config.assets",
