@@ -206,7 +206,6 @@ For a list of all settings, please consult the [plugin documentation].
   [example]: #example
   [built-in optimize plugin]: ../plugins/optimize.md
 
-
 ??? example "Expand to inspect example"
 
     For the official documentation, the [built-in privacy plugin] downloads the
@@ -279,6 +278,24 @@ For a list of all settings, please consult the [plugin documentation].
 
   [built-in privacy plugin]: ../plugins/privacy.md
   [preconnect]: https://developer.mozilla.org/en-US/docs/Web/Performance/dns-prefetch
+
+#### Advanced settings
+
+<!-- md:sponsors -->
+<!-- md:version insiders-4.50.0 -->
+
+The following advanced settings are currently reserved to our [sponsors]
+[Insiders]. They are entirely optional, and don't affect the functionality of
+the blog, but can be helpful for customizations:
+
+- [`log`][config.log]
+- [`log_level`][config.log_level]
+
+We'll add more settings here, as we discover new use cases.
+
+  [Insiders]: ../insiders/index.md
+  [config.log]: ../plugins/privacy.md#config.log
+  [config.log_level]: ../plugins/privacy.md#config.log_level
 
 ## Customization
 
